--- a/HTML5_II/David/CSS/Ejemplo01.css
+++ b/HTML5_II/David/CSS/Ejemplo01.css
@@ -16,8 +16,8 @@
 
 header{
   padding: 15px;
-  color: white;
-  background-color: black;
+  color: black;
+  background-color: blue;
 }
 
 nav ul{
@@ -31,21 +31,22 @@ nav a{
 }
 
 nav li{
-  background-color: gray;
+  background-color: blue;
   padding: 8px;
-  color: black;
+  color: white;
   box-shadow: 0px 3px 5px black;
   margin-bottom: 7px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 nav li:hover{
-  background-color: slategray;
-  box-shadow: 0px 3px 5px darkgray;
+  background-color: darkblue;
+  box-shadow: 0px 3px 5px black;
 }
 
 aside{
   padding: 15px;
-  background-color: darkslategray;
+  background-color: darkblue;
   color: white;
   font-size: 14px;
 }
