--- a/HTML5_II/REINALDO/CSS/Ejemplo01.css
+++ b/HTML5_II/REINALDO/CSS/Ejemplo01.css
@@ -13,8 +13,8 @@
 }
 header{
   padding: 15px;
-  background-color: darkslategrey;
-  color: white;
+  background-color: rgb(219, 163, 99);
+  color: black;
 }
 nav ul{
   list-style: none;
@@ -26,19 +26,19 @@ nav a{
 }
 nav li{
   padding: 8px;
-  background-color: darkslategrey;
-  color: white;
+  background-color: rgb(128, 182, 182);
+  color: black;
   box-shadow: 0px 3px 5px gray;
   margin-bottom: 7px;
 }
 nav li:hover{
-  background-color: slategray;
+  background-color: rgb(49, 90, 92);
 }
 
 aside{
   padding: 15px;
-  background-color: slategray;
-  color: white;
+  background-color: rgb(153, 207, 117);
+  color: black;
   font-size: 14px;
 }
 
